--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,8 +11,8 @@ body, html {
 .asosiy {
     width: 1100px;
     height: 600px;
-    background-color: rgb(119, 52, 52);
-    margin: 5px;
+    background-color: rgb(133, 60, 60);
+    margin: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,4 +24,7 @@ body, html {
     grid-template-rows: repeat(30, 1fr);
     width: 100%;
     height: 100%;
+}
+.hidden {
+    display: none;
 }
