--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-
 body, html {
     margin: 0;
     padding: 0;
@@ -16,6 +15,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .konteyner {
@@ -28,3 +28,31 @@ body, html {
 .hidden {
     display: none;
 }
+/* Info-box ning asosiy holati */
+#info-box {
+    position: fixed;  /* Sahifa ustida joylashadi */
+    display: none;  /* Avval yashirin */
+    width: 200px;
+    padding: 10px;
+    font-size: 14px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 9999; /* Yuqori qatlamda ko‘rinishi uchun */
+    pointer-events: none; /* Boshqa elementlar bilan to‘qnashmasligi uchun */
+}
+
+/* Info-box ko‘rinishi kerak bo‘lsa */
+#info-box:not(.hidden) {
+    display: block;
+}
+
+/* Rasm o‘lchami va joylashishi */
+#info-image {
+    width: 100px;
+    height: 100px;
+    object-fit: cover; /* rasm mos ravishda joylashadi */
+}
+
+
