--- a/templates/main.html
+++ b/templates/main.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sahifangiz tavsifi bu yerga yoziladi">
-    <meta name="apple-mobile-web-app-capable" content="yes"> <!-- Fullscreen rejim -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="default"> <!-- Status bar rangi -->
-    <meta name="apple-mobile-web-app-title" content="Sahifa nomi"> <!-- iOS Home screen nomi -->
-    <title>Grid Kataklar</title>
+    <meta name="description" content="Nima gap">
+    <meta name="apple-mobile-web-app-capable" content="yes"> 
+    <meta name="apple-mobile-web-app-status-bar-style" content="default"> 
+    <meta name="apple-mobile-web-app-title" content="Sahifa nomi"> 
+    <title>Asilbek</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
 </head>
 <body>
     <div class="asosiy">
@@ -19,6 +18,9 @@
             <h1 id="info-title"></h1>
             <img id="info-image" src="" alt="" style="width: 100px; height: 100px; object-fit: cover;">
             <p id="info-description"></p>
+        </div>
+        <div class="hidden">
+            <h1>Uylarkuuuu</h1>
         </div>
         
     </div>
