--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,10 +28,9 @@ body, html {
 .hidden {
     display: none;
 }
-/* Info-box ning asosiy holati */
 #info-box {
-    position: fixed;  /* Sahifa ustida joylashadi */
-    display: none;  /* Avval yashirin */
+    position: fixed;  
+    display: none;  
     width: 200px;
     padding: 10px;
     font-size: 14px;
@@ -39,20 +38,18 @@ body, html {
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 9999; /* Yuqori qatlamda ko‘rinishi uchun */
-    pointer-events: none; /* Boshqa elementlar bilan to‘qnashmasligi uchun */
+    z-index: 9999;
+    pointer-events: none; 
 }
 
-/* Info-box ko‘rinishi kerak bo‘lsa */
 #info-box:not(.hidden) {
     display: block;
 }
 
-/* Rasm o‘lchami va joylashishi */
 #info-image {
     width: 100px;
     height: 100px;
-    object-fit: cover; /* rasm mos ravishda joylashadi */
+    object-fit: cover;
 }
 
 
