--- a/templates/main.html
+++ b/templates/main.html
@@ -19,13 +19,11 @@
             <img id="info-image" src="" alt="" style="width: 100px; height: 100px; object-fit: cover;">
             <p id="info-description"></p>
         </div>
-        <div class="hidden">
+        <div class="hidden" id="info-uy">
             <h1>Uylarkuuuu</h1>
         </div>
         
     </div>
-
-
 
 
     <script>
