--- a/templates/main.html
+++ b/templates/main.html
@@ -22,10 +22,15 @@
         <div class="hidden" id="info-uy">
             <h1>Uylarkuuuu</h1>
         </div>
-        
     </div>
-
-
+    <div class="samakotlar">
+        <h1>nima</h1>
+        <h1 id="info-title2"></h1>
+        <img id="info-image2" src="" alt="" style="width: 100px; height: 100px; object-fit: cover;">
+        <p id="info-description2"></p>
+        
+        <button>Tanlash</button>
+    </div>
     <script>
         const jetData = JSON.parse('{{ jet_json|safe }}');
     </script>
