--- a/templates/main.html
+++ b/templates/main.html
@@ -26,10 +26,11 @@
     <div class="samakotlar">
         <h1>nima</h1>
         <h1 id="info-title2"></h1>
+        <h3 id="yashirin" style="display: none;"></h3>
         <img id="info-image2" src="" alt="" style="width: 100px; height: 100px; object-fit: cover;">
         <p id="info-description2"></p>
         
-        <button>Tanlash</button>
+        <button id="tanlash">Tanlash</button>
     </div>
     <script>
         const jetData = JSON.parse('{{ jet_json|safe }}');
